[project]
name = "Art"
version = "0.0.1"
authors = [
  { name="DotZZ", email="official.dotzz@gmail.com" },
]
description = "Lorem ipsum dolar sit amet"
readme = "README.md"
requires-python = ">=3.12"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"