[project]
name = "Art"
version = "0.2"
authors = [
  { name="DotZZ", email="official.dotzz@gmail.com" },
]
description = "The BallsDex art package is a custom package developed by `dot_zz` on Discord that simulates Ballsdex's art revamp acception system in their official server."
readme = "README.md"
requires-python = ">=3.12"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"